# admmdtf

./: CMakeLists.txt  README.md  group.conf  group_admm.conf  hostfile  mpirun.sh  try.py
pure/: CMakeLists.txt  mpirun_cxx.sh
src/: train_framework.cpp  train_framework.h  train_framework.i
